<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spaces</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search for an app&#8230;</string>
    <string name="send_email">Email</string>
    <string name="new_contact">Contact</string>
    <string name="new_event">Event</string>
    <string name="new_alarm">Alarm</string>
    <string name="new_phone">New Phone Call</string>
    <string name="settings_title">Launcher Settings</string>
    <string name="smart_morning">Good morning,</string>
    <string name="smart_afternoon">Good afternoon,</string>
    <string name="smart_night">Good night,</string>
    <string name="custom_dialog_title">Select Action</string>
    <string name="custom_dialog_widget">Add Widget</string>
    <string name="custom_dialog_shortcat">Add Shortcat</string>
    <string name="custom_dialog_app">Add App</string>
    <string name="custom_dialog_remove">Remove this space</string>
    <string name="smart_title">Smart</string>
    <string name="custom_title">Custom</string>
    <string name="today_title">Today</string>
    <string name="content_descriotion_app">App Image</string>
    <string name="drawer_apps_title">Apps Drawer</string>
    <string name="drawer_apps_order_az">AZ</string>
    <string name="drawer_apps_order_update">Last Update</string>
    <string name="drawer_apps_order_install">Last Install</string>
    <string name="drawer_apps_order_most_used">Most used</string>
    <string name="drawer_right_title">Spaces</string>
    <string name="preferences_spaces_title">Spaces</string>
    <string name="preferences_spaces_order_title">Order</string>
    <string name="preferences_spaces_transition">Transition</string>
    <string name="preferences_theme_title">Appearance</string>
    <string name="preferences_theme_theme_title">Theme</string>
    <string name="preferences_theme_wallpaper_title">Wallpaper</string>
    <string name="preferences_theme_font_title">Font</string>
    <string name="preferences_theme_icon_pack_title">Icon Pack</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_about_version_title">Version</string>
    <string name="preferences_about_author_title">Author</string>
    <string name="preferences_feedback_title">Feedback</string>
    <string name="preferences_feedback_contact">Contact</string>
    <string name="preferences_feedback_rate">Rate</string>
    <string name="module_app_long_app_info">Info</string>
    <string name="module_app_long_app_share">Share</string>
    <string name="module_app_long_app_detail">Store Info</string>
    <string name="module_app_long_app_unistall">Unistall</string>

</resources>