<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary=""
        android:title="@string/preferences_spaces_title" >
        <Preference
            android:key="spaces_order"
            android:title="@string/preferences_spaces_order_title" />
        <Preference
            android:key="spaces_transition"
            android:title="@string/preferences_spaces_transition" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary=""
        android:title="@string/preferences_feedback_title" >
        <Preference
            android:key="contact"
            android:title="@string/preferences_feedback_contact" />
        <Preference
            android:key="rate"
            android:title="@string/preferences_feedback_rate" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary=""
        android:title="@string/preferences_about_title" >
        <Preference
            android:key="version"
            android:title="@string/preferences_about_version_title" />
        <Preference
            android:key="author"
            android:summary="Abimael Barea Puyana"
            android:title="@string/preferences_about_author_title" />
    </PreferenceCategory>

</PreferenceScreen>