<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentLayout"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/Drawer_color"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sendEmail"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/send_email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/newContact"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/new_contact"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/newEvent"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/new_event"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/newAlarm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/new_alarm"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/torch"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/torch"
        android:textSize="20sp" />

</LinearLayout>