<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_5"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:background="@drawable/background_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/drawer_apps_order_update"
        android:textColor="@color/Black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:background="@drawable/background_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/drawer_apps_order_install"
        android:textColor="@color/Black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:background="@drawable/background_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/drawer_apps_order_most_used"
        android:textColor="@color/Black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:background="@drawable/background_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/drawer_apps_order_az"
        android:textColor="@color/Black"
        android:textSize="15sp" />

</RelativeLayout>