<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_spaces_background_color"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:elevation="2dp" />

        <TextView
            android:id="@+id/titleApp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="-15dp"
            android:layout_marginTop="25dp"
            android:background="@color/Black_transparent"
            android:fontFamily="sans-serif-bold"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/White"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/info"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_action_12581283071984968747missiridia_universal_information_symbol"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/module_app_long_app_info"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/share"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_action_256x256_black_white_android_share"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/module_app_long_app_share"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/unistall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_action_icon_ios7_trash_outline_128"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/module_app_long_app_unistall"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_action_android_playstore"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/module_app_long_app_detail"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>